--- a/url-tests/Views/Home/Index.cshtml
+++ b/url-tests/Views/Home/Index.cshtml
@@ -23,6 +23,7 @@ REQUEST_URI: @Request.ServerVariables["REQUEST_URI"]
 X-FORWARDED-FOR: @Request.ServerVariables["X-FORWARDED-FOR"]
 X-FOO: @Request.ServerVariables["X-FOO"]
 HTTP_X_REWRITE_URL: @Request.ServerVariables["HTTP_X_REWRITE_URL"]
+HTTP_X_ORIGINAL_URL: @Request.ServerVariables["HTTP_X_ORIGINAL_URL"]
 Request.RawUrl: @Request.RawUrl
 Request.Url.ToString(): @Request.Url.ToString()
     </pre>
